--- a/printer.cfg
+++ b/printer.cfg
@@ -85,6 +85,7 @@ sensor_pin:  PF4 # T0
 sensor_type: NTC 100K MGB18-104F39050L32
 min_temp: 0
 max_temp: 300
+pressure_advance: 0.976
 # min_extrude_temp: 0
 # max_extrude_only_distance: 500.0
 
@@ -308,15 +309,15 @@ points: 155, 80
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 69.863
-#*# pid_ki = 1.226
-#*# pid_kd = 995.542
+#*# pid_kp = 73.655
+#*# pid_ki = 0.643
+#*# pid_kd = 2110.217
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 20.880
-#*# pid_ki = 0.898
-#*# pid_kd = 121.365
+#*# pid_kp = 28.762
+#*# pid_ki = 1.775
+#*# pid_kd = 116.487
 #*#
 #*# [bed_mesh Kurama]
 #*# version = 1
