--- a/printer.cfg
+++ b/printer.cfg
@@ -39,7 +39,7 @@ dir_pin: !PG1
 enable_pin: !PF15
 microsteps: 16
 rotation_distance: 40
-endstop_pin: !PG9
+endstop_pin: PG9
 # position_max: 365
 position_max: 350
 homing_speed: 50
@@ -50,7 +50,7 @@ position_min: -5
 # Driver2
 [stepper_z]
 step_pin: PF11
-dir_pin: !PG3
+dir_pin: PG3
 enable_pin: !PG5
 microsteps: 16
 rotation_distance: 8
@@ -59,16 +59,18 @@ rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_max: 303
 position_min: -5
+gear_ratio: 60:20
 
 # Driver3
 [stepper_z1]
 step_pin: PG4
-dir_pin: !PC1
+dir_pin: PC1
 enable_pin: !PA0
 microsteps: 16
 rotation_distance: 8
 # endstop_pin: probe:z_virtual_endstop
 # endstop_pin: !PG10
+gear_ratio: 60:20
 
 
 # Driver4
@@ -137,11 +139,13 @@ min_temp: 0
 max_temp: 130
 
 [fan]
-pin: PA8
+pin: PE5
+# pin: PA8
 
 [heater_fan fan1]
-pin: PE5
+pin: PA8
 heater_temp: 50.0
+# pin: PE5
 
 [heater_fan fan2]
 pin: PD12
@@ -170,7 +174,7 @@ sensor_type: temperature_host
 [printer]
 kinematics: cartesian
 max_velocity: 300
-max_accel: 3000
+max_accel: 1500
 max_z_velocity: 5
 max_z_accel: 100
 
@@ -315,18 +319,18 @@ points: 155, 80
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 28.762
-#*# pid_ki = 1.775
-#*# pid_kd = 116.487
+#*# pid_kp = 26.633
+#*# pid_ki = 1.492
+#*# pid_kd = 118.852
 #*#
 #*# [bed_mesh Kurama]
 #*# version = 1
 #*# points =
-#*# 	  0.002500, 0.145000, 0.070000, 0.087500, 0.040000
-#*# 	  -0.160000, 0.017500, -0.045000, -0.107500, -0.212500
-#*# 	  -0.270000, -0.020000, -0.070000, -0.137500, -0.312500
-#*# 	  -0.332500, -0.075000, -0.105000, -0.227500, -0.375000
-#*# 	  -0.522500, -0.170000, -0.185000, -0.327500, -0.495000
+#*# 	0.911667, 0.810000, 0.778333, 0.890000, 0.789167
+#*# 	0.732500, 0.716667, 0.694167, 0.719167, 0.617500
+#*# 	0.558333, 0.640000, 0.652500, 0.653333, 0.538333
+#*# 	0.430000, 0.597500, 0.621667, 0.581667, 0.505833
+#*# 	0.585833, 0.855000, 0.888333, 0.822500, 0.755000
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -339,4 +343,4 @@ points: 155, 80
 #*# max_y = 270.0
 #*#
 #*# [probe]
-#*# z_offset = 1.150
+#*# z_offset = 1.600
